3rdparty/scitech/INCLUDE/GM/GM.H

/*---------------------------------------------------------------------------
 * Function to start OpenGL rendering support for the device context. After
 * this function has been called, you must perform all rendering operations
 * via OpenGL functions as the regular MGL functions may no longer have
 * direct access to the device context surface. You can call
 * MGL_surfaceAccessType() after calling this function to determine if the
 * MGL functions can draw on the OpenGL surface (MGL_NO_ACCESS means we dont
 * have direct access). In the future this will be more fully integrated and
 * the MGL functions will always be accessible.
 *
 * The flags passed to this function as the same flags passed to
 * MGL_glCreateContext. If you pass a value of MGL_GL_VISUAL you should
 * first call MGL_glChooseVisual/MGL_glSetVisual for the GMDC->dispdc
 * device context to set a custom visual format.
 *
 * Note also that this function must be called after any call to
 * MGL_setWindowedMode or MGL_setFullScreenMode. 
 *-------------------------------------------------------------------------*/

ibool 	MGLAPI GM_startOpenGL(MGL_glContextFlagsType flags);
/*---------------------------------------------------------------------------
 * Functions to swap display buffers. The second version can be used in
 * windowing modes or with a system memory back buffer to collect a region
 * of dirty rectangle that need to be updated and only those rectangles
 * will be copied. It is recommended that the application call
 * MGL_optimizeRegion on the dirty region before calling this function
 * to minimize the number of blit operations required for the swap.
 *-------------------------------------------------------------------------*/

void	MGLAPI GM_swapBuffers(MGL_waitVRTFlagType waitVRT);
void 	MGLAPI GM_swapDirtyBuffers(region_t *dirty,MGL_waitVRTFlagType waitVRT);
/*---------------------------------------------------------------------------
 * Functions to set the palette entries and to realize the current palette
 * in the hardware. Note that you should always uses these functions rather
 * than the MGL functions as these ensure that any system memory back
 * buffers have the palette properly updated to ensure identiy palette
 * mappings for maximum blitting performance in a window.
 *-------------------------------------------------------------------------*/

void 	MGLAPI GM_setPalette(palette_t *pal,int numColors,int startIndex);
void 	MGLAPI GM_realizePalette(int numColors,int startIndex,int waitVRT);
/*---------------------------------------------------------------------------
 * Function to execute the Game Framework main loop. This is the last
 * function in the Game Framework that your application should call and it
 * will continue until you request to exit. This function will call the
 * installed exit function if one is registered before destroying the
 * graphics mode.
 *-------------------------------------------------------------------------*/

void 	MGLAPI GM_mainLoop(void);
/*---------------------------------------------------------------------------
 * Functions used to implement the GM_mainLoop function, allowing you to
 * write your own replacement for GM_mainLoop.
 *-------------------------------------------------------------------------*/

void 	MGLAPI GM_processEvents(void);
void 	MGLAPI GM_processEventsWin(void);
/*---------------------------------------------------------------------------
 * Function to inform that game framework main loop that you wish to exit
 * the application. This simply causes the main loop function to return
 * after all pending messages have been processed.
 *-------------------------------------------------------------------------*/

void 	MGLAPI GM_exit(void);
/*---------------------------------------------------------------------------
 * Delphi DLL entry points to read global variables
 *-------------------------------------------------------------------------*/

ibool	MGLAPI GM_getHaveWin31(void);
	
ibool	MGLAPI GM_getHaveWin95(void);
ibool	MGLAPI GM_getHaveWinNT(void);
ibool	MGLAPI GM_getDoDraw(void);
ibool	MGLAPI GM_getExitMainLoop(void);