3rdparty/scitech/SRC/MGL/DELPHI/MGLGM.PAS


function    GM_startOpenGL(flags: int): bool; cdecl; external DLLName name '_GM_startOpenGL';
procedure   GM_swapBuffers(waitVRT: int); cdecl; external DLLName name '_GM_swapBuffers';
procedure   GM_swapDirtyBuffers(dirty: pregion_t; waitVRT: int); cdecl; external DLLName name '_GM_swapDirtyBuffers';
procedure   GM_setPalette(pal: ppalette_t; numColors: int; startIndex: int); cdecl; external DLLName name '_GM_setPalette';
procedure   GM_realizePalette(numColors: int; startIndex: int; waitVRT: bool); cdecl; external DLLName name '_GM_realizePalette';
procedure   GM_mainLoop; cdecl; external DLLName name '_GM_mainLoop';
procedure   GM_processEvents; cdecl; external DLLName name '_GM_processEvents';
procedure   GM_processEventsWin; cdecl; external DLLName name '_GM_processEventsWin';
procedure   GM_cleanUp; cdecl; external DLLName name '_GM_cleanUp';
procedure   GM_exit; cdecl; external DLLName name '_GM_exit';
function    GM_getHaveWin31: bool; cdecl; external DLLName name '_GM_getHaveWin31';
function    GM_getHaveWin95: bool; cdecl; external DLLName name '_GM_getHaveWin95';
function    GM_getHaveWinNT: bool; cdecl; external DLLName name '_GM_getHaveWinNT';
function    GM_getDoDraw: bool; cdecl; external DLLName name '_GM_getDoDraw';
function    GM_getExitMainLoop: bool; cdecl; external DLLName name '_GM_getExitMainLoop';

end.
